--- a/index.html
+++ b/index.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>The Pretty Reckless</title>
   </head>
-  <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+
+  <body style="font-family: 'Pretendard';">
+    <div style="text-align: center;">
+      <h1>
+        Going to Hell
+      </h1>
+      <span>
+        The Pretty Reckless <br />
+        <span style="color: rgb(255, 36, 65); font-size: 0.8em;"
+          >Hard Rock</span
+        >
+      </span>
+    </div>
+    <br />
+    <br />
+    <div style="float: left; width: 25%;">
+      <h2>
+        Track
+      </h2>
+      <ol>
+        <li>Follow Me Down</li>
+        <li>Going to Hell</li>
+        <li>Heaven Knows</li>
+        <li>House on a Hill</li>
+        <li>Sweet Things</li>
+        <li>Dear Sister</li>
+        <li>Absolution</li>
+        <li>Blame me</li>
+        <li>Burn</li>
+        <li>Why'd You Bring a Shotgun to the Party</li>
+        <li>F*cked up World</li>
+        <li>Waiting for a Friend</li>
+        <li>Going to Hell (Acoustic)</li>
+        <li>Sweet Things (Acoustic)</li>
+      </ol>
+    </div>
+
+    <div style="float: right; width: 25%;">
+      <h1></h1>
+    </div>
+
+    <div style="float: right; width: 50%; text-align: center;">
+      <h4>Follow Me Down</h4>
+      <pre style="font-family: 'Pretendard'; line-height: 2;">
+    Since I met you I've been crazy
+    Since I've been with you I've been lost
+    You make everything seem so hazy
+    Love comes with such a cost
+    Have I lost my mind?
+    Have I lost my mind?
+    Have I lost my mind?
+    Follow me down to the river
+    Drink while the water is clean
+    Follow me down to the river tonight
+    I'll be down here on my knees
+    So follow me down to the river
+    Follow me down through the trees
+    Follow me down to the river, man
+    I'll be down here on my knees
+    I'll be down here on my knees
+    Nights avoiding things unholy
+    Your hand slips across my skin
+    I go down on you so slowly
+    Don't confess none of your sins
+    Have I lost my mind?
+    Have I lost my mind?
+    Follow me down to the river
+    Drink while the water is clean
+    Follow me down to the river tonight
+    I'll be down here on my knees
+    So follow me down to the river
+    Follow me down through the trees
+    Follow me down to the river, man
+    I'll be down here on my knees
+    I'll be down here on my knees
+    When you're young you always take what you can get
+    Even bicycles and sprinklers get you wet
+    Now I know that there's a different way to die
+    My body breathes
+    Heart still beats
+    But I am not alive
+    Follow me down to the river
+    Drink while the water is clean
+    Follow me down to the river tonight
+    I'll be down here on my knees
+    So follow me down to the river
+    Follow me down through the trees
+    Follow me down to the river, man
+    I'll be down here on my knees
+    I'll be down here on my knees
+    Young love as sweet as can be.</pre
+      >
+    </div>
   </body>
 </html>
